Tue Oct 11 07:55:38 2011  Eric Hodel  <drbrain@segment7.net>

	* array.c:  Add a description to Array, minor cleanups.  Patch by
	  Andrea Singh.  [Ruby 1.9 - Bug #5412]

Tue Oct 11 06:09:52 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/pp.rb:  Move PP documentation to top of class PP.  Patch by
	  Sylvain Daubert.  [Ruby 1.9 - Bug #5430]

Tue Oct 11 06:06:29 2011  Eric Hodel  <drbrain@segment7.net>

	* ext/coverage/coverage.c (Init_coverage):  Change list format and
	  describe Coverage.result output.  Patch by Sylvain Daubert.
	  [Ruby 1.9 - Bug #5428]

Tue Oct 11 05:53:23 2011  Eric Hodel  <drbrain@segment7.net>

	* object.c (Init_Object):  Add reference to BasicObject, brief
	  explanation of constant lookup.  Based on patch by Alvaro Pereyra
	  Rabanal.
	  [Ruby 1.9 - Bug #5426]

Sun Oct  9 11:06:52 2011  Kazuki Tsujimoto  <kazuki@callcc.net>

	* test/psych/test_yamldbm.rb: don't run test if the system
	  don't support yaml/dbm.

	* test/syck/test_yamldbm.rb: ditto.

Sat Oct  8 08:54:56 2011  Eric Hodel  <drbrain@segment7.net>

	* enum.c (group_by):  Improve group_by description.  Patch by b t.
	  [#5411]

Sat Oct  8 03:17:51 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/shell.rb:  Document some methods of Shell.  Patch by Carol
	  Nichols.  [Ruby 1.9 - Bug #5417]

Fri Oct  7 17:54:28 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/test/unit/assertions.rb (assert_send, assert_not_send):
	  parenthesize non-empty arguments.

Fri Oct  7 06:35:50 2011  Eric Hodel  <drbrain@segment7.net>

	* array.c:  Use + for arguments described in documentation to allow
	  rdoc -C2 to work better.  Remove <code> from method references to
	  allow cross-references in HTML documentation.

Thu Oct  6 18:46:23 2011  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* vm_eval.c (make_no_method_exception): fix typo.

	* vm_insnhelper.c, vm_insnhelper.h: ditto.

Thu Oct  6 16:29:30 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (make_no_method_execption): extract from