@@ -1,3 +1,12 @@
+Tue Oct 11 08:49:40 2011  Eric Hodel  <drbrain@segment7.net>
+
+	* array.c (rb_ary_initialize):  Improve explanation of Array.new
+	  parameters.  Patch by Alvaro Pereyra Rabanal.  [Ruby 1.9 - Bug #5425]
+	* array.c (rb_ary_s_try_convert):  Fix typo (try => tries)
+	* array.c (rb_ary_rindex):  Add spacing for block.
+	* array.c (rb_ary_uniq_bang):  Describe block
+	* array.c (rb_ary_uniq):  ditto
+
 Tue Oct 11 07:55:38 2011  Eric Hodel  <drbrain@segment7.net>
 
 	* array.c:  Add a description to Array, minor cleanups.  Patch by
